--- a/projects/titanic_survival_exploration/titanic_survival_exploration_colab.ipynb
+++ b/projects/titanic_survival_exploration/titanic_survival_exploration_colab.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "titanic_survival_exploration.ipynb",
       "version": "0.3.2",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "language_info": {
       "codemirror_mode": {
@@ -27,16 +26,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/shabububu/machine-learning/blob/master/projects/titanic_survival_exploration/titanic_survival_exploration_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "metadata": {
         "id": "YfJnZ28gvRcI",
@@ -1130,7 +1119,12 @@
       },
       "cell_type": "markdown",
       "source": [
-        "**Answer**: *Replace this text with your answer to the question above.*"
+        "**Answer**: One scenario would be trying to predict who would live past their 50 years of age. The outcome variable would similar -- survived. Two features could be:\n",
+        "\n",
+        "\n",
+        "1.   Mother had cancer\n",
+        "2.   Father had cancer\n",
+        "\n"
       ]
     },
     {
@@ -1143,19 +1137,6 @@
         "> **Note**: Once you have completed all of the code implementations and successfully answered each question above, you may finalize your work by exporting the iPython Notebook as an HTML document. You can do this by using the menu above and navigating to  \n",
         "**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission."
       ]
-    },
-    {
-      "metadata": {
-        "id": "DXhNW4JyvRdM",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
