--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Just poking around. Some info on what this data is supposed to represent:\n",
+    "### Janice's notes: Just poking around. Some info on what this data is supposed to represent based on documentation:\n",
     "\n",
     "```\n",
     "\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -164,7 +164,7 @@
        "4  7.147   5.33     18.7  760200.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** Yes, I would consider this model to capture the variation of the score. It's close to 1, which means the score is preditable. **(TODO: Come back to this and think more. Hopefully, I'm not oversimplifying.)**"
+    "**Answer:** Yes, I would consider this model to capture the variation of the score. It's close to 1, and means that  92.3% of the variance in the output is predictable from the input. "
    ]
   },
   {
@@ -432,9 +432,9 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "An overfit model will most likely give you very good results on any subset of your training data, whether the model is good or bad. By using all of your training data, you don't have a good sense of whether or not your model performs well on new data. Splitting and setting aside specific testing data is recommended for that reason, to give a better sense of how the model performs generally.\n",
+    "Splitting and setting aside specific testing/validation data is recommended to give a better sense of how the model performs generally. An overfit model will most likely give you very good results on any subset of your training data, whether the model is good or bad, which is why you shouldn't test on training data. \n",
     "\n",
-    "However, if you split your data in a bad way, such that your training split doesn't represent the data well enough, you could still train a bad model. That's why using random splits and recyling data using methods like K-fold Cross Validation is also beneficial."
+    "However, if you split your data in a bad way, such that your training split doesn't represent the data well enough, you could still train a bad model. That's why using random splits are also recommended."
    ]
   },
   {
@@ -502,7 +502,7 @@
     "**Answer: **\n",
     "\n",
     "* I choose the graph where the maximum depth is 3.\n",
-    "* As more training points are added, the score of training cuve goes down, and the score of the testing points goes up. Both curves appear to be converging on a score.\n",
+    "* As more training points are added, the score of training curve goes down, and the score of the testing points goes up. Both curves appear to be converging on a score that's relatively high compared to max_depth = 1.\n",
     "* No. In this graph, having more training points doesn't seem beneficial. It looks like we know where both graphs are going. (Note, the max_depth = 6 graph is the only graph that looks like it might not be converging. I think that's the only graph that might benefit from more data. When the max_depth = 10, the lines don't seem to converge.)"
    ]
   },
@@ -555,7 +555,7 @@
    "source": [
     "**Answer: **\n",
     "* When the model is trained with a maximum depth of 1, does the model suffer from high bias or from high variance? **high bias**\n",
-    "* How about when the model is trained with a maximum depth of 10? **high variance** What visual cues in the graph justify your conclusions? **The validation score drops as the maximum depth increases. However, the training score continues to increase. This means that the model is too specific to the training data, while not being able to handle the testing cases that represent more general data.**\n"
+    "* How about when the model is trained with a maximum depth of 10? **high variance** What visual cues in the graph justify your conclusions? **The validation scores drop as the maximum depth increases. However, the training score continues to increase. This means that the model is too specific to the training data, while not being able to handle the testing cases that represent more general data.**\n"
    ]
   },
   {
@@ -577,7 +577,7 @@
     "\n",
     "**max_depth = 3**\n",
     "\n",
-    "When the maximum depth is 3, we get the highest scores for both the training and testing data. Once we increase the depth to 4, the scores start to diverge, which seems to show overfitting.\n"
+    "When the maximum depth is 3, we get the highest scores for both the training and testing data. Once we increase the depth to 4, the scores start to diverge, which makes me think it's starting to be overfit.\n"
    ]
   },
   {
@@ -607,9 +607,9 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "The grid search technique is one way of optimizing the hyperparameters of your learning model.\n",
+    "The grid search technique is one way of helping optimize the hyperparameters of your learning model.\n",
     "\n",
-    "The lectures describe how to this by making a grid or table to showcase all of the parameter combinations you want to test in order to find the optimal settings. For example, we could create of a grid of all of the different max_depth and min_samples_split values we want to try out. The potential max_depth values could be written on the rows of the grid, while the min_samples_split could be on the columns. For each combination of parameters, we find the score (e.g., F1, R^2, etc). The set of parameters with the highest score point to the settings of our hyperparameters that are optimal.\n"
+    "The lectures describe how to do this by making a grid or table to showcase all of the parameter combinations you want to test in order to find the optimal settings. For example, we could create of a table of all of the different max_depth and min_samples_split values we want to try out. The potential max_depth values could be written on the rows of the grid, while the min_samples_split could be on the columns. For each combination of parameters, we find the score (e.g., F1, R^2, etc). The set of parameters with the highest score point to the settings of our hyperparameters that are optimal.\n"
    ]
   },
   {
@@ -639,7 +639,7 @@
     "\n",
     "1. Break up your training data into K buckets. It's recommended that you do this randomly to avoid bias.\n",
     "2. Train your model K times. For each iteration, use the bucket itself as your cross-validation data, while the remaining data outside of the bucket is used for model training.\n",
-    "3. Once you've done this, your final model can be determined from the average of the generated model parameters (though I don't have a good idea of how this is done exactly).\n",
+    "3. Once you've done this, your final model can be determined from the average of the generated model parameters (though I don't have a good idea of how this is done *exactly*).\n",
     "\n",
     "Note that testing (or validation) data is still completely separate from the training data used in K-fold cross-validation.\n"
    ]
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
@@ -775,7 +775,7 @@
     "\n",
     "**Answer: **\n",
     "\n",
-    "The optimal maxiumum depth is 4. This is slightly higher than my anticipated 3."
+    "The optimal maxiumum depth is 4. This is slightly higher than my anticipated 3. I initially thought that a maximum depth of 4 showed signs of overfitting, but I was wrong."
    ]
   },
   {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
      "output_type": "stream",
      "text": [
       "Trial 1: $391,183.33\n",
-      "Trial 2: $424,935.00\n",
+      "Trial 2: $419,700.00\n",
       "Trial 3: $415,800.00\n",
       "Trial 4: $420,622.22\n",
       "Trial 5: $418,377.27\n",
@@ -874,7 +874,7 @@
       "Trial 9: $351,577.61\n",
       "Trial 10: $413,700.00\n",
       "\n",
-      "Range in prices: $73,357.39\n"
+      "Range in prices: $69,044.61\n"
      ]
     }
    ],
@@ -904,13 +904,13 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "No, I don't think the model should be used in a real-world setting.\n",
+    "I don't think this model should be used in a real-world setting.\n",
     "\n",
     "I'm really not sure about how relevant the data is from 1978. Accounting for inflation gives us something, but a lot could have changed in terms of poverty rates and school districts since then. This might be still good for helping us gain intuition about what model we could use and how to tune our model parameters (max_depth), but I think we should train on more recent data if we want to use this model in the real world.\n",
     "\n",
     "I don't think the features used are enough to describe the home. Curb appeal, upgrades to the home, square footage should all be factors. I'd pay more for a finished basement and a newer built home, which aren't features used to train our model.\n",
     "\n",
-    "I'm not sure about how to determine the model's robustness.\n",
+    "I'm not sure about how to determine the model's robustness. I do see the \"Sensitivity\" exercise above to show the range of prices produced by the model, which is \n",
     "\n",
     "We couldn't use this model for rural cities. Cost of homes vary largely when comparing high-cost of living areas compared to low-cost ones. We'd need more data from those rural cities and features for determining where the home is and how expensive it is to live there if we want to use the same model.\n",
     "\n",
@@ -925,13 +925,6 @@
     "> **Note**: Once you have completed all of the code implementations and successfully answered each question above, you may finalize your work by exporting the iPython Notebook as an HTML document. You can do this by using the menu above and navigating to  \n",
     "**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
