Tweaking first submission

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -910,7 +910,7 @@
     "\n",
     "I don't think the features used are enough to describe the home. Curb appeal, upgrades to the home, square footage should all be factors. I'd pay more for a finished basement and a newer built home, which aren't features used to train our model.\n",
     "\n",
-    "I'm not sure about how to determine the model's robustness. I do see the \"Sensitivity\" exercise above to show the range of prices produced by the model, which is \n",
+    "I'm not sure about how to determine the model's robustness. I do see the \"Sensitivity\" exercise above to show the range of prices produced by the model, which is almost $70k. Giving the client the average of our trials might be a better option.\n",
     "\n",
     "We couldn't use this model for rural cities. Cost of homes vary largely when comparing high-cost of living areas compared to low-cost ones. We'd need more data from those rural cities and features for determining where the home is and how expensive it is to live there if we want to use the same model.\n",
     "\n",
