Use numpy for min, max, median, std

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -164,7 +164,7 @@
        "4  7.147   5.33     18.7  760200.0"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -210,25 +210,25 @@
       "Maximum price: $1,024,800.00\n",
       "Mean price: $454,342.94\n",
       "Median price $438,900.00\n",
-      "Standard deviation of prices: $165,340.28\n"
+      "Standard deviation of prices: $165,171.13\n"
      ]
     }
    ],
    "source": [
     "# TODO: Minimum price of the data\n",
-    "minimum_price = prices.min()\n",
+    "minimum_price = np.min(prices)\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = prices.max()\n",
+    "maximum_price = np.max(prices)\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = prices.mean()\n",
+    "mean_price = np.mean(prices)\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = prices.median()\n",
+    "median_price = np.median(prices)\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = prices.std()\n",
+    "std_price = np.std(prices)\n",
     "\n",
     "# Show the calculated statistics\n",
     "print(\"Statistics for Boston housing dataset:\\n\")\n",
