Adding justification for Feature Observation part of question 1

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -265,9 +265,9 @@
     "**Answer: **\n",
     "\n",
     "My intuition tells me that:\n",
-    "* An increase in 'RM' would **increase** 'MEDV'\n",
-    "* An increase in 'LSTAT' would **decrease** 'MEDV'\n",
-    "* An increase in 'PTRATIO' would **decrease** 'MEDV'\n",
+    "* An increase in 'RM' would **increase** 'MEDV' **Justification: Generally, a larger number of rooms would indicate a larger home, resulting in a higher price. For example, 3-bedroom apartments tend to have a higher price compared with 2-bedroom apartments. However, it would be better if we also took into consideration the total square footage of the home.**\n",
+    "* An increase in 'LSTAT' would **decrease** 'MEDV' **Justification: Generally, lower class workers can afford less than those that have higher income. I would expect home prices to reflect that -- a larger population of lower class income translates to lower home prices.**\n",
+    "* An increase in 'PTRATIO' would **decrease** 'MEDV' **Justification: A lower student to teacher ratio usually means there are more resources available for each student. That takes money, which could come from property tax. Higher property tax from higher priced homes could translate to more resources to students in the area.**\n",
     "\n",
     "My intuition about the example questions:\n",
     "* Would you expect a home that has an 'RM' value(number of rooms) of 6 be worth more or less than a home that has an 'RM' value of 7? **Less**\n",
