Further description of high bias on complexity curve when max depth = 1. Note: Still TODO on the R-squared question

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -374,7 +374,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** Yes, I would consider this model to capture the variation of the score. It's close to 1, and means that  92.3% of the variance in the output is predictable from the input. "
+    "**Answer:** \n",
+    "\n",
+    "Yes, I would consider this model to capture the variation of the score. It's close to 1, and means that  92.3% of the variance in the output is predictable from the input. \n",
+    "\n",
+    "**Further Explanation**\n",
+    "\n",
+    "**TODO**\n",
+    "\n",
+    "Resources:\n",
+    "\n",
+    "* https://blog.minitab.com/blog/adventures-in-statistics-2/regression-analysis-how-do-i-interpret-r-squared-and-assess-the-goodness-of-fit\n",
+    "* https://en.wikipedia.org/wiki/Coefficient_of_determination\n",
+    "* https://corporatefinanceinstitute.com/resources/knowledge/other/r-squared/\n",
+    "* https://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html"
    ]
   },
   {
@@ -554,7 +567,9 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "* When the model is trained with a maximum depth of 1, does the model suffer from high bias or from high variance? **high bias**\n",
+    "\n",
+    "* When the model is trained with a maximum depth of 1, does the model suffer from high bias or from high variance? **High bias. For a maximum depth of 1, both the training and validation scores are too low on the curves. It's a poor generalization. This points to high bias or underfitting.**\n",
+    "\n",
     "* How about when the model is trained with a maximum depth of 10? **high variance** What visual cues in the graph justify your conclusions? **The validation scores drop as the maximum depth increases. However, the training score continues to increase. This means that the model is too specific to the training data, while not being able to handle the testing cases that represent more general data.**\n"
    ]
   },
@@ -633,7 +648,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "Regular cross-validation calls for breaking up your training data further into model training and cross-validation sets. The model training set is used for actually training your model, while the cross-validation set is used for hyperparameter tuning. However, it'd be nice to be able to use your entire training data set to for model training as well.\n",
+    "Regular cross-validation calls for breaking up your training data further into model training and cross-validation sets. The model training set is used for actually training your model (fitting your data to your model), while the cross-validation set is used for hyperparameter tuning. However, it'd be nice to be able to use your entire training data set to for model training as well.\n",
     "\n",
     "The lectures describe the K-fold cross-validation as a method for recycling your data, essentially providing you a way to use your cross-validation data for model training. The method is as follows:\n",
     "\n",
