Initial explanation expansion to predicted prices section

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -848,11 +848,29 @@
     "\n",
     "What price would you recommend each client sell his/her home at?\n",
     "\n",
+    "Before we do this, let's revisit the stats we calculated earlier on:\n",
+    "\n",
+    "```\n",
+    "Minimum price: $105,000.00\n",
+    "Maximum price: $1,024,800.00\n",
+    "Mean price: $454,342.94\n",
+    "Median price $438,900.00\n",
+    "Standard deviation of prices: $165,171.13\n",
+    "```\n",
+    "\n",
+    "Recommended prices and why --\n",
+    "\n",
     "* Predicted selling price for Client 1's home: $403,025.00\n",
     "\n",
+    "  This home has a moderate number of rooms (5), a poverty percentage that mid-range compared to the other homes (17%), and an again moderate student to teacher ratio (15-to-1). These are all mid-grade features in a home, which makes it fairly average with a near-average price. We'd expect that the price on this home is closer to the mean or median price of the data we trained on, and it makes sense that the model predicts this price.\n",
+    "  \n",
     "* Predicted selling price for Client 2's home: $237,478.72\n",
     "\n",
+    "This home has the smallest number of rooms (4), a high poverty percentage compared to the other homes (32%), and a high student to teacher ratio (22-to-1). These are all less desirable features in a home, which makes it below average in our predicted price. \n",
+    "\n",
     "* Predicted selling price for Client 3's home: $931,636.36\n",
+    "\n",
+    "  This home has the largest number of rooms (8), the lowest poverty percentage (3%), and the smallest student to teacher ratio (12-to-1). These are the best possible features in a home. This is an above average home, with an above average price. We'd actually expect that the price on this home is on the higher end of our price scale.  \n",
     "\n",
     "Do these prices seem reasonable given the values for the respective features?\n",
     "\n",
