Expanding response about rsquared score.

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -380,14 +380,15 @@
     "\n",
     "**Further Explanation**\n",
     "\n",
-    "**TODO**\n",
+    "My initial answer needed further explanation upon review. To understand more about how R^2 score is a measure of goodness of fit, I went to Wikipedia, Khan Academy, and other sites (links below). Those resources explained that the R^2 score measures \"how much prediction error we eliminated\". To gain more intuition, we should look at the sum of squares error of the residuals to see how far off our true values are from our model's predictions. Then, we should look at the total sum of squares to see how far off our true values are from the mean score value. (The total SSE is proportional to the variance of the data.) If we divide the residual SSE by the total SSE, we'll essentially find out how much error we have left.  If our residual SSE is small compared to our total SSE, we will have reduced the error by a lot, and our R^2 value will be higher. If our residual SSE is closer to our total SSE, we'll have eliminated very little error using our model, and our R^2 value will be lower. By looking at how much error we've reduced, we can potentially tell how successfuly our model captures the true score values.\n",
+    "\n",
+    "Low scoring R^2 values might have high error when comparing the true scores to the predicted ones. High scoring R^2 would be a better fit, with lower error compared to the model.\n",
     "\n",
     "Resources:\n",
     "\n",
-    "* https://blog.minitab.com/blog/adventures-in-statistics-2/regression-analysis-how-do-i-interpret-r-squared-and-assess-the-goodness-of-fit\n",
     "* https://en.wikipedia.org/wiki/Coefficient_of_determination\n",
-    "* https://corporatefinanceinstitute.com/resources/knowledge/other/r-squared/\n",
-    "* https://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html"
+    "* https://www.khanacademy.org/math/ap-statistics/bivariate-data-ap/assessing-fit-least-squares-regression/a/r-squared-intuition\n",
+    "* https://blog.minitab.com/blog/adventures-in-statistics-2/how-to-interpret-a-regression-model-with-low-r-squared-and-low-p-values"
    ]
   },
   {
@@ -863,14 +864,17 @@
     "* Predicted selling price for Client 1's home: $403,025.00\n",
     "\n",
     "  This home has a moderate number of rooms (5), a poverty percentage that mid-range compared to the other homes (17%), and an again moderate student to teacher ratio (15-to-1). These are all mid-grade features in a home, which makes it fairly average with a near-average price. We'd expect that the price on this home is closer to the mean or median price of the data we trained on, and it makes sense that the model predicts this price.\n",
+    "\n",
     "  \n",
     "* Predicted selling price for Client 2's home: $237,478.72\n",
     "\n",
-    "This home has the smallest number of rooms (4), a high poverty percentage compared to the other homes (32%), and a high student to teacher ratio (22-to-1). These are all less desirable features in a home, which makes it below average in our predicted price. \n",
+    "  This home has the smallest number of rooms (4), a high poverty percentage compared to the other homes (32%), and a high student to teacher ratio (22-to-1). These are all less desirable features in a home, which makes it below average in our predicted price. \n",
+    "  \n",
     "\n",
     "* Predicted selling price for Client 3's home: $931,636.36\n",
     "\n",
     "  This home has the largest number of rooms (8), the lowest poverty percentage (3%), and the smallest student to teacher ratio (12-to-1). These are the best possible features in a home. This is an above average home, with an above average price. We'd actually expect that the price on this home is on the higher end of our price scale.  \n",
+    "\n",
     "\n",
     "Do these prices seem reasonable given the values for the respective features?\n",
     "\n",
