Additional note for question 4.

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -382,7 +382,7 @@
     "\n",
     "My initial answer needed further explanation upon review. To understand more about how R^2 score is a measure of goodness of fit, I went to Wikipedia, Khan Academy, and other sites (links below). Those resources explained that the R^2 score measures \"how much prediction error we eliminated\". To gain more intuition, we should look at the sum of squares error of the residuals to see how far off our true values are from our model's predictions. Then, we should look at the total sum of squares to see how far off our true values are from the mean score value. (The total SSE is proportional to the variance of the data.) If we divide the residual SSE by the total SSE, we'll essentially find out how much error we have left.  If our residual SSE is small compared to our total SSE, we will have reduced the error by a lot, and our R^2 value will be higher. If our residual SSE is closer to our total SSE, we'll have eliminated very little error using our model, and our R^2 value will be lower. By looking at how much error we've reduced, we can potentially tell how successfuly our model captures the true score values.\n",
     "\n",
-    "Low scoring R^2 values might have high error when comparing the true scores to the predicted ones. High scoring R^2 would be a better fit, with lower error compared to the model.\n",
+    "Low scoring R^2 values might have high error when comparing the true scores to the predicted ones. High scoring R^2 would be a better fit, with lower error compared to the model predictions.\n",
     "\n",
     "Resources:\n",
     "\n",
@@ -516,8 +516,10 @@
     "**Answer: **\n",
     "\n",
     "* I choose the graph where the maximum depth is 3.\n",
-    "* As more training points are added, the score of training curve goes down, and the score of the testing points goes up. Both curves appear to be converging on a score that's relatively high compared to max_depth = 1.\n",
-    "* No. In this graph, having more training points doesn't seem beneficial. It looks like we know where both graphs are going. (Note, the max_depth = 6 graph is the only graph that looks like it might not be converging. I think that's the only graph that might benefit from more data. When the max_depth = 10, the lines don't seem to converge.)"
+    "* As more training points are added, the score of training curve goes down, and the score of the testing points goes up. Both curves appear to be converging on a score that's relatively high compared to max_depth = 1, which makes the max_depth=3 look better. The lower score with max_depth=1 seems to point to high bias or underfitting.\n",
+    "* In this graph, having more training points doesn't seem beneficial. It looks like we know where both graphs are going. (Note, the max_depth = 6 graph is the only graph that looks like it might not be converging. I think that's the only graph that might benefit from more data. When the max_depth = 10, the lines don't seem to converge.)\n",
+    "\n",
+    "NOTE -- I think this question is badly phrased. I think you'd like to test with this problem the conclusions we"
    ]
   },
   {
