Grid search + k-fold cross validation addition

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -519,7 +519,7 @@
     "* As more training points are added, the score of training curve goes down, and the score of the testing points goes up. Both curves appear to be converging on a score that's relatively high compared to max_depth = 1, which makes the max_depth=3 look better. The lower score with max_depth=1 seems to point to high bias or underfitting.\n",
     "* In this graph, having more training points doesn't seem beneficial. It looks like we know where both graphs are going. (Note, the max_depth = 6 graph is the only graph that looks like it might not be converging. I think that's the only graph that might benefit from more data. When the max_depth = 10, the lines don't seem to converge.)\n",
     "\n",
-    "NOTE -- I think this question is badly phrased. I think you'd like to test with this problem the conclusions we"
+    "NOTE -- I think this question is badly phrased. I think you'd like to test with this problem the conclusions we draw from all four learning curves, which is why I needed to revise my response. Rather than have us choose \"one of the graphs\", it might be better to instruct us to describe what we see in each of the graphs instead."
    ]
   },
   {
@@ -627,7 +627,7 @@
     "\n",
     "The grid search technique is one way of helping optimize the hyperparameters of your learning model.\n",
     "\n",
-    "The lectures describe how to do this by making a grid or table to showcase all of the parameter combinations you want to test in order to find the optimal settings. For example, we could create of a table of all of the different max_depth and min_samples_split values we want to try out. The potential max_depth values could be written on the rows of the grid, while the min_samples_split could be on the columns. For each combination of parameters, we find the score (e.g., F1, R^2, etc). The set of parameters with the highest score point to the settings of our hyperparameters that are optimal.\n"
+    "The lectures describe how to do this by making a grid or table to showcase all of the parameter combinations you want to test in order to find the optimal settings. For example, we could create of a table of all of the different max_depth and min_samples_split values we want to try out. The potential max_depth values could be written on the rows of the grid, while the min_samples_split could be on the columns. For further clarification, the inputs to the grid search are all of the hyperparameters that you'd like to tune with their correponding set of inputs. For each combination of parameters, we find the score (e.g., F1, R^2, etc). The set of parameters with the highest score point to the settings of our hyperparameters that are optimal.\n"
    ]
   },
   {
@@ -659,7 +659,9 @@
     "2. Train your model K times. For each iteration, use the bucket itself as your cross-validation data, while the remaining data outside of the bucket is used for model training.\n",
     "3. Once you've done this, your final model can be determined from the average of the generated model parameters (though I don't have a good idea of how this is done *exactly*).\n",
     "\n",
-    "Note that testing (or validation) data is still completely separate from the training data used in K-fold cross-validation.\n"
+    "Note that testing (or validation) data is still completely separate from the training data used in K-fold cross-validation.\n",
+    "\n",
+    "Using grid search with k-fold cross validation allows you to use your entire training set for tuning your various sets of parameters to find the optimal one."
    ]
   },
   {
