Continuining to tweak the grid search response.

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -627,19 +627,17 @@
     "\n",
     "The grid search technique is one way of helping optimize the hyperparameters of your learning model.\n",
     "\n",
-    "The lectures describe how to do this by making a grid or table to showcase all of the parameter combinations you want to test in order to find the optimal settings. For example, we could create of a table of all of the different max_depth and min_samples_split values we want to try out. The potential max_depth values could be written on the rows of the grid, while the min_samples_split could be on the columns. For further clarification, the inputs to the grid search are all of the hyperparameters that you'd like to tune with their correponding set of inputs. For each combination of parameters, we find the score (e.g., F1, R^2, etc). The set of parameters with the highest score point to the settings of our hyperparameters that are optimal.\n",
-    "\n",
-    "**Further Clarification:\n",
-    "\n",
     "The basic inputs to the grid search are the following:\n",
     "\n",
     "* your estimator or model\n",
-    "* the \"grid\" of parameters that you'd like to optimize along with the values that you'd like to try\n",
-    "* a scoring mechanism to determine how well your model performs with a particular combination of parameters from the grid\n",
+    "* the \"grid\" of parameters that you'd like to optimize along with the values that you'd like to try (for example: max_depth and min_samples_split values we want to try out if we're trying to optimize a decision tree)\n",
+    "* a scoring mechanism to determine how well your model performs with a particular combination of parameters from the grid (e.g., F1, R^2, etc)\n",
     "\n",
-    "The output is the set of parameters that provide the best score.\n",
+    "The output is the set scores associated with all of the parameter combinations. From that, you can determine which set produces the best scores.\n",
     "\n",
-    "Providing a scoring mechanism with the grid search is necessary so we know how to pick"
+    "Providing a scoring mechanism with the grid search is necessary so we know how to pick the best set of parameters.\n",
+    "\n",
+    "The grid in a gridSearch search represents all of the different combinations of hyper parameters values that you would like to tune. We can use it to pick the best scoring combination of those parameters for our model."
    ]
   },
   {
