Rework: Tweaking AdaBoostClassifier suitability

--- a/projects/finding_donors/finding_donors.ipynb
+++ b/projects/finding_donors/finding_donors.ipynb
@@ -1513,7 +1513,7 @@
     "The logistic regression model and SGCDClassifier were much faster in terms of prediction and training times, respectively. The AdaBoostClassifier model was slower at under 2 seconds for training and 0.11 seconds for predicting.\n",
     "\n",
     "**Suitability**\n",
-    "It seems like it could work, and it appears to. The AdaBoostClassifier trains multiple weak models so the aggregate of their results produce a strong classifier. Multiple models together lessen the likelihood of overfitting. The training and predicting off of the multiple models seems to be the biggest drawback, but there's no indication it's too slow for our purposes. Also, the accuracy and f-scores for this classifier seem close when comparing the test and training values. This seems to point indicate that we're not overfitting or underfitting our data."
+    "It seems like it could work, and it appears to. The AdaBoostClassifier trains multiple weak models so the aggregate of their results produce a strong classifier. Multiple models together lessen the likelihood of overfitting. The training and predicting off of the multiple models seems to be the biggest drawback, but there's no indication it's too slow for our purposes. Also, the accuracy and f-scores for this classifier seem relatively close when comparing the test and training set results. This seems to indicate that we're not overfitting ur data."
    ]
   },
   {
